= Next Release: 4.7

 - Use system file descriptor limits when max_user_watches is not accessible

= Release History

== 4.6: July 1, 2020

 - Always call waitpid(2) to avoid dead processes
 - Duplicate STDIN file descriptor before closing; for the '-r' option

== 4.5: April 20, 2020

 - New '-z' "one-shot" option self-terminates after the utility exits
 - Termination by 'q' or 'SIGINT' results in an exit status of 0

== 4.4: January 02, 2020

 - Use a single inotify queue on Linux, limited by
   /proc/sys/fs/inotify/max_user_watches
 - Set the environment variable `ENTR_INOTIFY_WORKAROUND` to enable a
   compatibility mode for platforms with deformed inotify support

== 4.3: September 25, 2019

 - Move hosting from bitbucket.org to github.com
 - Rename tag names from entr-X.Y to X.Y
 - Replace hg with git as a dependency for system-test.sh

== 4.2: March 28, 2019

 - Use pledge(2) on OpenBSD
 - New '-a' option enables response to events that occur while the utility is
   running
 - Error messages direct users to http://eradman.com/entrproject/limits.html
 - Correctly report error when a file cannot be reopened

== 4.1: June 13, 2018

 - New '-n' non-interactive option disables keyboard input
 - EV_TRACE environment variable enables file system event tracing
 - Track changes to the inode number as a workaround for missing delete
   events on the Linux kernel

== 4.0: February 02, 2018

 - Warn instead of error if kqueue fails to register on STDIN
 - Close STDIN before running the utility when the restart option is used
 - Restore terminal settings if terminated by a signal

== 3.9: September 19, 2017

 - Fix use of poll(2) to avoid possible busy-loop on Linux
 - Disable keyboard input if reading STDIN fails

== 3.8: August 11, 2017

 - Run the utility if the spacebar is pressed
 - 'q' for quit

== 3.7: February 27, 2017

 - Terminate subprocess in restart mode if a file under watch disappears
 - Allow NOTE_ATTRIB to set '/_' only if file mode changes